# ida-xed

./: CMakeLists.txt  README.md
src/: main.cpp
